# ai-quickstart-guide

./: .gitignore  AGENTS.md  AI_DECK_SOURCE_GUIDE.md  AI_DECK_SOURCE_INVENTORY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-CONTENT  README.md  RELEASE_READY_AUDIT.md  RELEASING.md  SECURITY.md  SUPPORT.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broken_link_or_source.yml  bug_report.yml  code_sample.yml  content_correction.yml  deck_source.yml  feature_request.yml
.github/workflows/: deploy.yml  export-playbook.yml  link-check.yml  pr-build.yml
code-samples/track-4/: LAB_TEMPLATE.md
code-samples/track-4/common/: README.md  llm_client.py  pyproject.toml
code-samples/track-4/common/synthetic_data/: constituent_messages.jsonl
code-samples/track-4/lab-1/solution/: README.md  llm_wrapper.py  test_llm_wrapper.py
code-samples/track-4/lab-1/starter/: README.md  llm_wrapper.py
code-samples/track-4/lab-2/solution/: README.md  classifier.py  main.py  test_classifier.py
code-samples/track-4/lab-2/starter/: README.md  classifier.py  main.py  test_classifier.py
code-samples/track-4/lab-3/solution/: README.md  eval.py  ingest.py  main.py  pyproject.toml  rag.py  retrieve.py  test_rag.py
code-samples/track-4/lab-3/solution/data/: 01-remote-work.md  08-it-acceptable-use.md  13-leave-policy.md  15-grants-management.md  16-social-media.md  25-purchase-card.md
code-samples/track-4/lab-3/starter/: README.md  ingest.py  main.py  pyproject.toml  rag.py  retrieve.py  test_rag.py
code-samples/track-4/lab-3/starter/data/: 02-records-retention.md  03-public-records-request.md  05-procurement-thresholds.md  07-code-of-conduct.md  11-grievance-procedure.md  17-open-data.md  21-whistleblower.md
code-samples/track-4/lab-4/solution/: README.md  agent.py  main.py  observability.py  pyproject.toml  test_agent.py  tools.py
code-samples/track-4/lab-4/starter/: README.md  agent.py  main.py  pyproject.toml  test_agent.py  tools.py
code-samples/track-4/lab-5/solution/: README.md
code-samples/track-4/lab-5/starter/sample-app/: README.md  db.py  main.py  models.py  pyproject.toml  search.py  test_main.py
code-samples/track-4/lab-6/solution/: README.md  conftest.py  pyproject.toml
code-samples/track-4/lab-6/solution/classifier/: __init__.py
code-samples/track-4/lab-6/solution/tests/: golden.jsonl  test_golden.py  test_judge.py  test_performance.py  test_property.py  test_regression.py
code-samples/track-4/lab-7/solution/policy_classifier/: pyproject.toml
code-samples/track-4/lab-7/solution/policy_classifier/src/policy_classifier/: __init__.py  factory.py  ports.py
code-samples/track-4/lab-7/solution/policy_classifier/src/policy_classifier/adapters/: __init__.py  few_shot.py  structured.py  zero_shot.py
code-samples/track-4/lab-7/solution/policy_classifier/tests/: test_contract.py  test_integration.py
code-samples/track-4/lab-7/starter/consumer-app/: main.py  pyproject.toml
code-samples/track-4/lab-8/solution/civic-assistant/: DEPLOYMENT.md  Dockerfile  compose.yaml  pyproject.toml
code-samples/track-4/lab-8/solution/civic-assistant/data/policy_corpus/: 06-ai-acceptable-use.md  09-data-classification.md  12-vendor-onboarding.md  18-emergency-operations.md
code-samples/track-4/lab-8/solution/civic-assistant/src/civic_assistant/: __init__.py  answer.py  classify.py  main.py  observability.py  settings.py  triage.py
code-samples/track-4/lab-8/solution/civic-assistant/src/civic_assistant/_vendored/classifier/: classifier.py
code-samples/track-4/lab-8/solution/civic-assistant/tests/: conftest.py  test_answer.py  test_answer_judge.py  test_classify.py  test_triage.py
public/deck-sources/phase-3/: environment-design-workshop.md  environment-setup-basics.md
public/deck-sources/phase-6/: post-launch-whats-next-review.md  production-readiness-signoff.md  starter-project-selection-decision.md
public/deck-sources/program/: ai-quickstart-program-kickoff.md  council-board-budget-request.md  leadership-commitment-staff-launch.md  legislative-oversight-briefing.md  quarterly-sponsor-report.md
public/templates/: budget-template.csv
scripts/: build-playbook.mjs  check-deck-sources.mjs  check-export.mjs  check-links.mjs
src/components/: AUPWizard.tsx  AgencyPathDropdown.astro  AgencyPathPicker.tsx  AgencyRouteChooser.tsx  AgencySetupWizard.tsx  AtAGlance.astro  CharterWizard.tsx  ComplianceMatrix.tsx  FreshnessNote.astro  HeaderWithPicker.astro  IntakeForm.tsx  PhaseBanner.astro  ROICalculator.tsx  ReadinessAssessment.tsx  RiskTierPicker.tsx  StarterProjectSelector.tsx  Takeaways.astro  UseCaseInventory.tsx
src/content/docs/: index.mdx
src/lib/: agencySize.ts  printDocument.ts
src/plugins/: remark-base-links.mjs
src/styles/: forms.css  path.css  readiness.css  theme.css  tier.css  wizard.css
(+199 files in other folders)
