[project]
name = "track4-common"
version = "0.1.0"
description = "Shared code for AI Quickstart Track 4 labs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_client"]
