[project]
name = "constituent-records-search"
version = "0.0.1"
description = "Intentionally flawed constituent records search service used as a playground for AI coding assistants in Lab 4.5."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "db", "models", "search"]
