[project]
name = "civic-assistant"
version = "0.1.0"
description = "Capstone service for AI Quickstart Track 4 Lab 4.8"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
